# videogamebench-template

./: .dockerignore  .gitignore  Dockerfile.hud  README.md  emulator.py  env.py  games_loader.py  local_run.py  make_video.py  pyproject.toml  scoring.py  tasks.py
docs/: ADDING_GAMES.md
games/pokemon_crystal/: config.yaml  preload.txt  prompt.txt  ram_map.py
games/test/: config.yaml  prompt.txt
games/zelda/: config.yaml  preload.txt
roms/: .gitignore  README.md
tests/: test_emulator.py  test_scenarios.py  test_scoring.py
