[project]
name = "hud-vgbench"
version = "0.1.0"
description = "A HUD environment template that wraps VideoGameBench Game Boy games as scored, turn-based agent evals."
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python>=0.6.5",
    "pyboy>=2.7.0",          # Game Boy backend
    "imagehash>=4.3.1",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The runtime modules. Game configs + ROMs are copied into the image by the
# Dockerfile (and live next to these modules at runtime via /app on sys.path).
only-include = [
    "env.py",
    "tasks.py",
    "emulator.py",
    "scoring.py",
    "games_loader.py",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
